# backend

./: .gitignore  CHAT_API_README.md  README.md  app.py  deploy_to_render.md  env.example  move_routing_agent.ps1  render.yaml  requirements.txt  setup_routing_agent.py  simple_app.py  simple_chat_server.py  start_server.py  test_chat_api.py  test_chat_api_pytest.py  test_chat_direct.py  test_chat_integration.py  test_chat_simple.py  test_main_deployment.py  test_routing_response.py
agents/: README.md
agents/academic-research/academic_research/: __init__.py  agent.py
agents/academic-research/deployment/: test_academic_deployment.py
agents/academic-research/tests/: test_agents.py
agents/fomc-research/deployment/: test_fomc_deployment.py
agents/fomc_research/fomc_research/shared_libraries/: price_utils.py
agents/political-news/: pyproject.toml
agents/political-news/political_news/: __init__.py  agent.py
agents/political_news/: pyproject.toml
agents/political_news/political_news/: prompt.py
agents/political_news/political_news/sub_agents/: __init__.py  bias_analyzer.py  bias_analyzer_prompt.py  news_scraper_prompt.py
agents/political_news/tests/: test_agents.py
agents/routing-agent/: README.md  pyproject.toml  test_connection.py  test_imports.py  test_simple_imports.py
agents/routing-agent/deployment/: deploy.py
agents/routing-agent/routing_agent/: agent.py
agents/routing_agent/: README.md  README_CONNECTED.md  pyproject.toml  setup.py  setup_connected_agents.py  test_connection.py
agents/routing_agent/deployment/: deploy.py
agents/routing_agent/routing_agent/: __init__.py  agent.py  prompt.py
agents/routing_agent/tests/: test_routing.py
api/: schemas.py
database/: schemas.py
fomc-research/fomc_research/: __init__.py  agent.py
managers/: _vid_generator.py  chat_manager.py  chat_manager_clean.py  instagram_manager.py  scheduler.py  session_manager.py  vid_generator.py
political-news/: .env  README.md
political-news/political_news/sub_agents/: news_scraper.py
political-news/tests/: __init__.py
routing-agent/: .env  README.md  create_env.py  pyproject.toml  setup_connected_agents.py  test_connection.py
routing-agent/routing_agent/: agent.py  prompt.py
